examples/test/testpolicy15150.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15150
  namespace: namespace340
spec:
  podSelector:
    matchLabels:
      key43: value37
      key48: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value33
          key17: value23
          key47: value24
      podSelector:
        matchLabels:
          key2: value25
          key11: value10
          key10: value26
